--- a/easystacks/software.eessi.io/2023.06/eessi-2023.06-eb-4.9.1-2023a.yml
+++ b/easystacks/software.eessi.io/2023.06/eessi-2023.06-eb-4.9.1-2023a.yml
@@ -1,2 +1,5 @@
 easyconfigs:
   - ncdu-1.18-GCC-12.3.0.eb
+  - CREST-3.0-foss-2023a.eb:
+    options:
+      from-commit: babaaa4c1b133ef49a00ac1bfcd99eac9d7b373e 
